// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Radius should render 1`] = `
.c0 {
  display: block;
  border-radius: 0.125rem;
}

<div>
  <div
    class="c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;

exports[`Colors should render 1`] = `
.c0 {
  display: block;
  background-color: #38b2ac;
}

<div>
  <div
    class="c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;
